--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
