--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dropit-test",
+  "homepage": "https://Michael-Uzan.github.io/dropit-exam",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.6",
     "axios": "^0.21.1",
+    "gh-pages": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -36,8 +38,9 @@
     "lint": "./node_modules/.bin/eslint --fix src",
     "lint:ci": "./node_modules/.bin/eslint src",
     "build": "react-scripts build",
-    "deploy": "aws s3 sync build/ s3://dropit-test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
